--- a/.github/workflows/hexlet-ci-app.yml
+++ b/.github/workflows/hexlet-ci-app.yml
@@ -31,6 +31,12 @@ jobs:
       - run: make setup
       - run: make test
       - run: make lint
+
+  security:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         env:
